# bwrappy

./: .gitignore  README.md  main.py  nvim.yaml  pyproject.toml  sandbox.yaml
src/: models.py  runner.py
src/bwrappy/: __init__.py
templates/: base.yaml  git.yaml  nvim.yaml  zsh.yaml
tests/: conftest.py  test_configs.py  test_main.py  test_models.py  test_runner.py
